# robson

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .mcp.example.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DELIVERY-SUMMARY.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT_STATUS.md  Dockerfile  LICENSE  Makefile  PLATFORM.md  PROXIMOS-PASSOS.md  README.md  SESSION-STATE.md  SESSION-SUMMARY-2026-01-01.md  deploy-staging.sh  docker-compose.yml  fix-staging-backend.sh  justfile  main.c  osv-scanner.toml  pyproject.toml  rustfmt.toml  sonar-project.properties  test_final.py
.ai-agents/: ADR-0001-ai-governance.md  AI-WORKFLOW.md  CONTEXT.md  DECISION-MATRIX.md  MODES.md  SESSION-STATE-2025-12-22.md  validate.sh
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit
.github/: copilot-instructions.md  pull_request_template.md
apps/: __init__.py
atelier/: README.md
cli/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  package.json  smoke-test.sh  tsconfig.json
devtools/: robson-wt-new.sh
docs/: ADRs.md  AGENTIC-TRADING.md  AGENTS.md  AI-MEMORY-DB.md  AI_WORKFLOW.md  ARCHITECTURE.md  AUTH_FLOW.md  CLI.md  COMMAND-RUNNERS.md  CONTRIBUTING-ADAPTERS.md  DEVELOPER.md  DOMAIN.md  EXECUTION-PLAN.md  IMPLEMENTATION-SUMMARY.md  INDEX.md  INITIAL-AUDIT.md  INTEGRATION-ANALYSIS.md  LANGUAGE-POLICY.md  LOCAL_TESTING.md  MIGRATION_PLAN.md  PHASE_6.md  PHASE_9_SUMMARY.md  PRODUCTION_TRADING.md  PROMPT-PACK.md  SKILL.md  SMOKE-TEST.md  STRATEGIES.md  STRATEGY.md  STYLE_GUIDE.md  USER-JOURNEY-AGENTIC.md  technical-debt.md
frontend/: .dockerignore  .gitignore  README.md  nginx.conf  svelte.config.js  vite.config.ts
infra/: K9S-OPERATIONS.md  KTOP-OPERATIONS.md  README.md  debug-production-404.sh  discover-namespace.sh  find-backend-pods.sh  k9s.aliases.example.sh  ktop.aliases.example.sh  kubectl-debug-commands.md  quick-discover.sh  test-production-api.sh
k8s/: rbs-frontend-prod-deploy.yml
migrations/: 20240101000002_add_favorable_extreme.sql  20240101000004_exchange_credentials_multi_tenant.sql  20240101000005_add_binance_position_id.sql  20240101000007_query_audit_phase4.sql  20240101000008_create_monthly_state.sql  20240101000009_add_cancelled_position_state.sql  20240101000011_backfill_current_month_state.sql  20240101000012_grant_safety_net_permissions.sql  20240101000013_add_entry_mode_to_positions.sql  20240101000014_create_funding_sagas.sql  20240101000015_add_binance_position_id_to_detected_positions.sql  20240101000016_tz_harden_partition_functions.sql  20240101000017_add_insurance_stop_id.sql  20240101000018_add_invalidation_guard_level.sql  20240101000019_add_month_peak_net.sql  (+1 more)
robson-cli/: Cargo.toml
robson-cli/src/: main.rs
robson-cli/src/commands/: reconcile_close.rs
robson-connectors/: Cargo.toml
robson-connectors/src/: binance_rest.rs  binance_ws.rs  lib.rs
robson-db/: Cargo.toml
robson-db/src/: lib.rs
robson-domain/: Cargo.toml
robson-domain/src/: context.rs  credentials.rs  detected_position.rs  entities.rs  events.rs  lib.rs  market_data.rs  policy.rs  value_objects.rs
robson-sim/: Cargo.toml
robson-sim/src/: lib.rs
robson-store/: Cargo.toml
robson-store/migrations/: 001_initial_schema.sql
robson-store/src/: credential_store.rs  detected_position.rs  error.rs  lib.rs  memory.rs  postgres.rs  repository.rs
robson-testkit/: Cargo.toml
robson-testkit/src/: helpers.rs
v2/: .dockerignore  .env.test.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DELIVERY-SUMMARY.md  Dockerfile  README.md  clippy.toml  rustfmt.toml
v2/.cargo/: config.toml
v2/.claude/hooks/: README.md  post-tool-use.sh
v2/cli/: README.md  package.json
v2/cli/src/: context.test.ts  index.ts
v2/cli/src/api/: client.ts
v2/cli/src/commands/: arm.ts  disarm.ts  panic.ts  safety-status.ts  status.ts
v2/cli/src/types/: index.ts
v2/docs/: CLI.md  EXECUTION-PLAN.md  INDEX.md  PHASE_6.md  PHASE_9_NEXT.md  SMOKE-TEST.md
v2/docs/architecture/: RISK-ENGINE-PLAN.md
v2/k8s/prod/: robsond-configmap.yml
v2/migrations/: 002_event_log_phase9.sql  004_safety_net_detected_positions.sql  20240101000001_event_log_phase9.sql  20240101000003_safety_net_detected_positions.sql  20240101000006_positions_projection_recovery_metadata.sql
v2/robson-connectors/: Cargo.toml
v2/robson-connectors/src/: binance_rest.rs  binance_ws.rs  lib.rs
v2/robson-db/src/: init.rs  lib.rs
v2/robson-domain/: Cargo.toml
v2/robson-domain/src/: context.rs  credentials.rs  detected_position.rs  entities.rs  events.rs  lib.rs  market_data.rs  policy.rs  trailing.rs  value_objects.rs
v2/robson-engine/: Cargo.toml
v2/robson-engine/src/: lib.rs  risk.rs  signal_strategy.rs  technical_stop_analyzer.rs  trailing_stop.rs
v2/robson-eventlog/: Cargo.toml
v2/robson-eventlog/src/: append.rs  idempotency.rs  lib.rs  query.rs  types.rs
v2/robson-exec/: Cargo.toml
v2/robson-exec/src/: error.rs  executor.rs  intent.rs  lib.rs  ports.rs  stub.rs
v2/robson-projector/: Cargo.toml
v2/robson-projector/src/: apply.rs  error.rs  types.rs
v2/robson-projector/src/handlers/: balances.rs  mod.rs  orders.rs  positions.rs  queries.rs  risk.rs  strategy.rs
v2/robson-projector/tests/: integration_test.rs  projection_cursor_test.rs  trailing_stop_projection_test.rs
v2/robson-store/: Cargo.toml
v2/robson-store/src/: credential_store.rs  detected_position.rs  error.rs  lib.rs  memory.rs  postgres.rs  repository.rs
v2/robson-testkit/src/: helpers.rs  lib.rs
v2/robsond/: Cargo.toml
v2/robsond/src/: api.rs  binance_exchange.rs  circuit_breaker.rs  config.rs  daemon.rs  db.rs  detector.rs  error.rs  event_bus.rs  lib.rs  main.rs  market_data.rs  metrics.rs  position_manager.rs  position_monitor.rs  projection_worker.rs  query.rs  query_engine.rs  reconciliation_worker.rs  sse.rs
v2/robsond/tests/: api_contract.rs  crash_recovery.rs  replay_test.rs  trailing_stop_e2e.rs
v3/: CLAUDE.md  (+1 more)
(+1283 files in other folders)
