# pyproject.toml - Modern Python configuration for Robson Bot

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robson-bot"
version = "1.0.0"
description = "Open-source cryptocurrency trading platform with automated strategies and risk management"
readme = "README.md"
authors = [
    {name = "RBX Robótica", email = "dev@rbx.ia.br"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["cryptocurrency", "trading", "bot", "binance", "algorithmic-trading", "fintech"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/rbxrobotica/robson"
Documentation = "https://docs.robsonbot.com"
Repository = "https://github.com/rbxrobotica/robson"
Issues = "https://github.com/rbxrobotica/robson/issues"
Changelog = "https://github.com/rbxrobotica/robson/releases"

# ==============================================================================
# Testing - Pytest
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["apps/backend/monolith/api/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=apps.backend.core",
    "--cov=apps.backend.monolith.api",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--maxfail=5",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "spec: links test to specification file",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Django settings for tests
DJANGO_SETTINGS_MODULE = "backend.settings"
pythonpath = ["apps/backend/monolith"]

# ==============================================================================
# Coverage - Coverage.py
# ==============================================================================
[tool.coverage.run]
source = [
    "apps/backend/core",
    "apps/backend/monolith/api",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# Formatting - Black
# ==============================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | migrations
  | node_modules
  | build
  | dist
)/
'''

# ==============================================================================
# Import Sorting - isort
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*",
    "*/node_modules/*",
    "*/.venv/*",
    "*/venv/*",
]
known_first_party = ["apps", "backend", "api"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ==============================================================================
# Linting - Ruff
# ==============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "migrations",
    "node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"tests/*" = ["ARG", "PLR2004"]  # Test-specific ignores

[tool.ruff.lint.isort]
known-first-party = ["apps", "backend", "api"]

# ==============================================================================
# Type Checking - MyPy
# ==============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = [
    "migrations/",
    "node_modules/",
    ".venv/",
    "venv/",
    "tests/",
]

# Django stubs
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "backend.settings"

# Per-module options
[[tool.mypy.overrides]]
module = [
    "apps.backend.core.domain.*",
    "apps.backend.core.application.*",
]
disallow_untyped_defs = true
disallow_any_unimported = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "apps.backend.monolith.*"
disallow_untyped_defs = false  # Legacy code, gradually enable

[[tool.mypy.overrides]]
module = [
    "binance.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

# ==============================================================================
# Security - Bandit
# ==============================================================================
[tool.bandit]
targets = ["apps/backend"]
exclude_dirs = [
    "tests",
    "migrations",
    ".venv",
    "venv",
    "node_modules",
]
skips = [
    "B101",  # assert_used (OK in tests)
    "B601",  # paramiko_calls (not used)
]

[tool.bandit.assert_used]
exclude = ["*/tests/*", "*/test_*.py"]

# ==============================================================================
# Documentation - Sphinx (future)
# ==============================================================================
# [tool.sphinx]
# project = "Robson Bot"
# copyright = "2025, RBX Robótica"
# author = "RBX Robótica"

# ==============================================================================
# Packaging - Setuptools
# ==============================================================================
[tool.setuptools]
package-dir = {"" = "apps/backend"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["apps/backend"]
include = ["core*", "monolith*"]
exclude = ["tests*", "*.tests*"]

# ==============================================================================
# Development Tools
# ==============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]

# ==============================================================================
# Notes
# ==============================================================================
# Installation:
#   pip install -e .[dev]
#
# Run tests:
#   pytest
#
# Run with coverage:
#   pytest --cov
#
# Format code:
#   black .
#   isort .
#
# Lint:
#   ruff check .
#   ruff check --fix .
#
# Type check:
#   mypy apps/backend/core
#
# Security check:
#   bandit -r apps/backend
#
# All quality checks:
#   black . && isort . && ruff check --fix . && mypy apps/backend/core && bandit -r apps/backend && pytest
# ==============================================================================
