[package]
name = "robson-testkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

# Local dependencies
robson-eventlog = { path = "../robson-eventlog" }
robson-projector = { path = "../robson-projector" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
