[workspace]
members = [
    "robson-domain",
    "robson-engine",
    "robson-exec",
    "robson-connectors",
    "robson-store",
    "robsond",
    "robson-sim",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha"
edition = "2021"
authors = ["Robson Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal math (critical for financial calculations)
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# UUIDs (v7 for time-ordered IDs)
uuid = { version = "1.6", features = ["v7", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.21"

# Async trait
async-trait = "0.1"

# Config
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
