[package]
name = "robson-connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
robson-domain = { path = "../robson-domain" }
rust_decimal = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
chrono = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
