[package]
name = "robson-eventlog"
version = "2.0.0-alpha"
edition = "2021"
authors = ["Robson Bot Team"]
description = "Event log implementation for Robson v2 - append-only event storage with idempotency"

[dependencies]
# Domain
robson-domain = { path = "../robson-domain" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs
uuid = { version = "1.6", features = ["v4", "serde"] }
ulid = "1.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
