[package]
name = "robson-projector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
robson-eventlog = { path = "../robson-eventlog" }

# Workspace dependencies
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
