[package]
name = "robson-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
postgres = ["sqlx"]

[dependencies]
robson-domain = { path = "../robson-domain" }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
rust_decimal_macros = { workspace = true }
